@@ -23,6 +23,7 @@ Version 1.7.9+svn:
    * MP lobby refresh to the new timer engine
    * Change Drake Flare and Flameheart weapon names to match new weapons
    * Add a minimap cache for gui2
+   * Add a new super class for the button
 
 Version 1.7.9-beta2:
  * AI:
